# ocr-japanese-doc-by-line

./: .gitignore  README.md  _.code-workspace  idea.md  pyproject.toml
scr/: Convertor.py  File.py  Frame.py  OCR_by_google.py  Rect.py  Type_Alias.py  main.py  ocr-gcv.py  tess.py  test.py  test2.py  work.ipynb  work.py
