[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.13.1"
nptyping = "^2.1.1"
mypy = "^0.961"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = {extras = ["jupyter"], version = "^22.3.0"}
numpy = "^1.22.4"
notebook = "^6.4.12"
pyocr = "^0.8.3"
pdf2image = "^1.16.0"
google-cloud-vision = "^2.8.0"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
sklearn = "^0.0"
pyclustering = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"